--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="masukkan_password_text">Masukkan Password</string>
     <string name="sign_in_text">Sign In</string>
     <string name="show_password_text">Show Password</string>
+    <string name="login_text">Login</string>
 </resources>
